name:                bm-linear
version:             0.1.0.0
synopsis:            Beeminder with linear formulas
description:         Helps you to track goals on Beeminder.com of the form "More of A, B and C, and less of X, Y and Z". 
homepage:            https://github.com/greenrd/bm-linear#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Green
maintainer:          greenrd@greenrd.org
copyright:           2017 Robin Green
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.8 && < 5
                     , hoggl >= 0.1.0.0 && < 0.2
                     , beeminder-api
  default-language:    Haskell2010

executable bm-linear-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bm-linear
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/greenrd/bm-linear
