name:                bm-linear
version:             0.1.0.0
synopsis:            Beeminder with linear formulas
description:         Helps you to track goals on Beeminder.com of the form "More of A, B and C, and less of X, Y and Z". 
homepage:            https://github.com/greenrd/bm-linear#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Green
maintainer:          greenrd@greenrd.org
copyright:           2017 Robin Green
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.BmLinear.Config
                     , Data.BmLinear.Scorer
  build-depends:       base >= 4.9 && < 5
                     , aeson >= 1.0.0.0
                     , beeminder-api
                     , classy-prelude >= 1.2.0
                     , containers
                     , data-default-class
                     , hoggl >= 0.2.0.0 && < 0.3
                     , lens
                     , logging-effect >= 1.2.0
                     , servant-client >= 0.9.1.1
                     , time >= 1.5.0.1
                     , transformers
                     , wl-pprint-text >= 1.1.1.0
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -Wall

executable bm-linear
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , beeminder-api
                     , bm-linear
                     , bytestring
                     , classy-prelude >= 1.2.0
                     , containers
                     , data-default-class
                     , directory >= 1.3.0.0 && < 1.4
                     , hoggl
                     , http-api-data
                     , http-client >= 0.4.31.2
                     , http-client-tls
                     , lens
                     , logging-effect
                     , process
                     , servant-client >= 0.9.1.1
                     , time
                     , transformers >= 0.5.2.0 && < 0.6
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -Wall

test-suite bm-linear-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bm-linear
                     , classy-prelude
                     , containers
                     , hoggl
                     , tasty >= 0.11.2.1 && < 0.12
                     , tasty-hunit >= 0.9.2 && < 0.10
                     , time
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/greenrd/bm-linear
